--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pl">
 
+<!-- 
+jedna klasa zamiast wielu
+
+
+ -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +21,6 @@
         <nav>
             <div class="bg-img">
                 <div class="logo">loopstudios</div>
-                <div id="rectangle"></div>
                 <div class="blackBox">
                     <h1 class="blackMainBox">Immersive <br> experiences <br> that deliver</h1>
                 </div>
@@ -28,52 +32,53 @@
                     <li class="itemUpNav"><a href="#">Support</a></li>
                 </ul>
         </nav>
-        </div>
     </header>
-    <section class="mainContent ">
-        <img class="man" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
-        <div class="textAll">
-            <h2 class="mainSectionH upperCase">The leader in <br>interactive VR</h2>
-            <p class="mainSectionP">Founded in 2011, Loopstudios has been producing world-class<br> virtual reality
-                projects for some of the best companies around the <br>globe. Our award-winning
-                creations have transformed <br> businesses through digital experiences that bind
-                to their brand.</p>
-            <div class="rectangle"></div>
-        </div>
-    </section>
+    <main>
+        <section class="mainContent ">
+            <img class="man" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
+            <div class="textAll">
+                <h2 class="mainSectionH upperCase">The leader in <br>interactive VR</h2>
+                <p class="mainSectionP">Founded in 2011, Loopstudios has been producing world-class<br> virtual reality
+                    projects for some of the best companies around the <br>globe. Our award-winning
+                    creations have transformed <br> businesses through digital experiences that bind
+                    to their brand.</p>
+                <div class="rectangle"></div>
+            </div>
+        </section>
 
-    <section class="nextToImages">
-        <button class="see"> See all </button>
-        <h2 class="creations">Our Creations</h2>
-        <div class="firstColumnImages">
-            <img class="img1" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
+        <section class="nextToImages">
+            <button class="see"> See all </button>
+            <h2 class="creations">Our Creations</h2>
+            <div class="firstColumnImages">
+                <img class="image" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
 
-            <img class="img2" src="images/desktop/image-night-arcade.jpg" alt="arcade">
+                <img class="image" src="images/desktop/image-night-arcade.jpg" alt="arcade">
 
-            <img class="img3" src="images/desktop/image-soccer-team.jpg" alt="football player">
+                <img class="image" src="images/desktop/image-soccer-team.jpg" alt="football player">
 
-            <img class="img4" src="images/desktop/image-grid.jpg" alt="sport car">
-        </div>
+                <img class="image" src="images/desktop/image-grid.jpg" alt="sport car">
+            </div>
 
-        <div class="secondColumnImages">
-            <img class="img5" src="images/desktop/image-from-above.jpg" alt=" Center earth">
+            <div class="secondColumnImages">
+                <img class="image" src="images/desktop/image-from-above.jpg" alt=" Center earth">
 
-            <img class="img6" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
+                <img class="image" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
 
-            <img class="img7" src="images/desktop/image-curiosity.jpg" alt="football player">
+                <img class="image" src="images/desktop/image-curiosity.jpg" alt="football player">
 
-            <img class="img8" src="images/desktop//image-fisheye.jpg" alt="sport car">
-        </div>
-        <!-- Night arcade
-        Soccer team VR
-        The grid
-        From up above VR
-        Pocket borealis
-        The curiosity
-        Make it fisheye -->
-    </section>
+                <img class="image" src="images/desktop//image-fisheye.jpg" alt="sport car">
+            </div>
+            <!-- Night arcade
+            Soccer team VR
+            The grid
+            From up above VR
+            Pocket borealis
+            The curiosity
+            Make it fisheye -->
+        </section>
+    </main>
     <footer>
-        <div class="blackFooter">
+        <div class="footer-left">
             <p class="logoDown">loopstudios</p>
             <ul class="menuDown">
                 <li class="itemDownNav"><a href="#">About</a></li>
@@ -82,14 +87,15 @@
                 <li class="itemDownNav"><a href="#">Products</a></li>
                 <li class="itemDownNav"><a href="#">Support</a></li>
             </ul>
-
         </div>
-        <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
-        <div class="iconSocial">
-            <img class="social" src="/images/icon-facebook.svg" alt="facebook icon-facebook">
-            <img class="social2" width="22px" height="20px" src="/images/icon-twitter.svg" alt="icon-twitter">
-            <img class="social3" src="/images/icon-pinterest.svg" alt="icon-pinterest">
-            <img class="social4" src="/images/icon-instagram.svg" alt="icon-instagram">
+        <div class="footer-right">
+            <div class="socials">
+                <div class="social social-facebook" alt="facebook icon-facebook" />
+                <!-- <div class="social" src="/images/icon-twitter.svg" alt="icon-twitter" />
+                <div class="social" src="/images/icon-pinterest.svg" alt="icon-pinterest" />
+                <div class="social" src="/images/icon-instagram.svg" alt="icon-instagram" /> -->
+            </div>
+            <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
         </div>
     </footer>
 
@@ -97,7 +103,6 @@
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="#">Your Name Here</a>.
     </div> 
-    
 </body>
 
 </html>
