--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
-    <script src="main.js"></script>
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="main.css">\
+    <link rel="stylesheet" href="footer.css">
     <title>Frontend Mentor PROJECT</title>
 </head>
 
@@ -15,55 +16,62 @@
     <header>
         <nav>
             <div class="bg-img">
-                <div class="logo">loopstudios</div>
-                <div id="rectangle"></div>
-                <div class="blackBox">
-                    <h1 class="blackMainBox">Immersive <br> experiences <br> that deliver</h1>
-                </div>
-                <ul class="menuUp">
-                    <li class="itemUpNav"><a href="#">About</a></li>
-                    <li class="itemUpNav"><a href="#">Careers</a></li>
-                    <li class="itemUpNav"><a href="#">Events</a></li>
-                    <li class="itemUpNav"><a href="#">Products</a></li>
-                    <li class="itemUpNav"><a href="#">Support</a></li>
+                <div class="top-logo">loopstudios</div>
+                <h1 class="immersive-title">Immersive <br> experiences <br> that deliver</h1>
+                <ul class="nav-top-menu">
+                    <li class="nav-item"><a href="#">About</a></li>
+                    <li class="nav-item"><a href="#">Careers</a></li>
+                    <li class="nav-item"><a href="#">Events</a></li>
+                    <li class="nav-item"><a href="#">Products</a></li>
+                    <li class="nav-item"><a href="#">Support</a></li>
                 </ul>
+            </div>
+
         </nav>
         </div>
     </header>
-    <section class="mainContent ">
-        <img class="man" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
-        <div class="textAll">
-            <h2 class="mainSectionH upperCase">The leader in <br>interactive VR</h2>
-            <p class="mainSectionP">Founded in 2011, Loopstudios has been producing world-class<br> virtual reality
+    <section class="middle-content-section">
+        <img class="man-vr-image" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
+        <div class="right-text-side-all">
+            <h2 class="headlines-right-side">The leader in <br>interactive VR</h2>
+            <p class="paragraph-right-side">Founded in 2011, Loopstudios has been producing world-class<br> virtual reality
                 projects for some of the best companies around the <br>globe. Our award-winning
                 creations have transformed <br> businesses through digital experiences that bind
                 to their brand.</p>
-            <div class="rectangle"></div>
         </div>
+        <div class="white-rectangle"></div>
     </section>
+    <section class="under-man-vr-image">
+        <button class="see-all-button"> See all </button>
+        <h2 class="headlines-creations">Our Creations</h2>
+        <div class="first-column-images">
+            <img class="img" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
 
-    <section class="nextToImages">
-        <button class="see"> See all </button>
-        <h2 class="creations">Our Creations</h2>
-        <div class="firstColumnImages">
-            <img class="img1" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
+            <img class="img" src="images/desktop/image-night-arcade.jpg" alt="arcade">
 
-            <img class="img2" src="images/desktop/image-night-arcade.jpg" alt="arcade">
+            <img class="img" src="images/desktop/image-soccer-team.jpg" alt="football player">
 
-            <img class="img3" src="images/desktop/image-soccer-team.jpg" alt="football player">
-
-            <img class="img4" src="images/desktop/image-grid.jpg" alt="sport car">
+            <img class="img" src="images/desktop/image-grid.jpg" alt="sport car">
         </div>
+        <div class="second-column-images">
+            <img class="img" src="images/desktop/image-from-above.jpg" alt=" Center earth">
 
-        <div class="secondColumnImages">
-            <img class="img5" src="images/desktop/image-from-above.jpg" alt=" Center earth">
+            <img class="img" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
 
-            <img class="img6" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
+            <img class="img" src="images/desktop/image-curiosity.jpg" alt="football player">
 
-            <img class="img7" src="images/desktop/image-curiosity.jpg" alt="football player">
-
-            <img class="img8" src="images/desktop//image-fisheye.jpg" alt="sport car">
+            <img class="img" src="images/desktop//image-fisheye.jpg" alt="sport car">
         </div>
+        <!-- <div class="title-images">
+            <p class="title-img-first-section">deep <br> earth</p>
+            <p class="title-img-first-section">night <br> arcade</p>
+            <p class="title-img-first-section">soccer <br> team vr</p>
+            <p class="title-img-first-section">the <br> grid</p>
+            <p class="title-img-second-section">from up <br> above Vr</p>
+            <p class="title-img-second-sectiion">rocket <br> borealis</p>
+            <p class="title-img-second-section">the <br> curiosity</p>
+            <p class="title-img-second-section">make it <br> fisheye</p>
+        </div> -->
         <!-- Night arcade
         Soccer team VR
         The grid
@@ -73,31 +81,26 @@
         Make it fisheye -->
     </section>
     <footer>
-        <div class="blackFooter">
-            <p class="logoDown">loopstudios</p>
-            <ul class="menuDown">
-                <li class="itemDownNav"><a href="#">About</a></li>
-                <li class="itemDownNav"><a href="#">Careers</a></li>
-                <li class="itemDownNav"><a href="#">Events</a></li>
-                <li class="itemDownNav"><a href="#">Products</a></li>
-                <li class="itemDownNav"><a href="#">Support</a></li>
+        <p class="logo-down">loopstudios</p>
+        <div class="footer-left">
+            <ul class="menu-footer-down-list">
+                <li class="item-down-nav"><a href="#">About</a></li>
+                <li class="item-down-nav"><a href="#">Careers</a></li>
+                <li class="item-down-nav"><a href="#">Events</a></li>
+                <li class="item-down-nav"><a href="#">Products</a></li>
+                <li class="item-down-nav"><a href="#">Support</a></li>
             </ul>
-
         </div>
-        <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
-        <div class="iconSocial">
-            <img class="social" src="/images/icon-facebook.svg" alt="facebook icon-facebook">
-            <img class="social2" width="22px" height="20px" src="/images/icon-twitter.svg" alt="icon-twitter">
-            <img class="social3" src="/images/icon-pinterest.svg" alt="icon-pinterest">
-            <img class="social4" src="/images/icon-instagram.svg" alt="icon-instagram">
-        </div>
+        <div class="footer-right">
+            <div class="socials">
+                <div class="social social-facebook" alt="facebook icon-facebook" />
+                <!-- <div class="social" src="/images/icon-twitter.svg" alt="icon-twitter" />
+                <div class="social" src="/images/icon-pinterest.svg" alt="icon-pinterest" />
+                <div class="social" src="/images/icon-instagram.svg" alt="icon-instagram" /> -->
+            </div>
+            <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
     </footer>
-
-    <!-- <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
-    </div> 
-    
+    <script src="main.js"></script>
 </body>
 
 </html>
