--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <div class="bg-img">
-                <div class="top-logo">loopstudios</div>
+                <div class="top-logo"></div>
                 <h1 class="immersive-title">Immersive <br> experiences <br> that deliver</h1>
                 <ul class="nav-top-menu">
                     <li class="nav-item"><a href="#">About</a></li>
@@ -81,8 +81,8 @@
         Make it fisheye -->
     </section>
     <footer>
-        <p class="logo-down">loopstudios</p>
         <div class="footer-left">
+            <p class="logo-down">loopstudios</p>
             <ul class="menu-footer-down-list">
                 <li class="item-down-nav"><a href="#">About</a></li>
                 <li class="item-down-nav"><a href="#">Careers</a></li>
@@ -93,12 +93,13 @@
         </div>
         <div class="footer-right">
             <div class="socials">
-                <div class="social social-facebook" alt="facebook icon-facebook" />
-                <!-- <div class="social" src="/images/icon-twitter.svg" alt="icon-twitter" />
-                <div class="social" src="/images/icon-pinterest.svg" alt="icon-pinterest" />
-                <div class="social" src="/images/icon-instagram.svg" alt="icon-instagram" /> -->
+                <div class="social social-facebook" alt="facebook icon-facebook"></div>
+                <div class="social social-twitter " alt="icon-twitter"></div>
+                <div class="social social-pinterest" alt="icon-pinterest"></div>
+                <div class="social social-instagram" alt="icon-instagram"></div>
             </div>
             <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
+        </div>
     </footer>
     <script src="main.js"></script>
 </body>
