Change class name

--- a/index.html
+++ b/index.html
@@ -18,59 +18,60 @@
 <body>
     <header>
         <nav>
-            <div class="bg-img">
-                <h1 class="immersive-title">Immersive <br> experiences <br> that deliver</h1>
-                <ul class="nav-top-menu">
-                    <div class="top-logo"></div>
-                    <li class="nav-item"><a href="#">About</a></li>
-                    <li class="nav-item"><a href="#">Careers</a></li>
-                    <li class="nav-item"><a href="#">Events</a></li>
-                    <li class="nav-item"><a href="#">Products</a></li>
-                    <li class="nav-item"><a href="#">Support</a></li>
+            <div class="background__image">
+                <h1 class="background__title">Immersive <br> experiences <br> that deliver</h1>
+                <ul class="nav__list">
+                    <div class="nav__logo"></div>
+                    <li class="nav__item"><a href="#">About</a></li>
+                    <li class="nav__item"><a href="#">Careers</a></li>
+                    <li class="nav__item"><a href="#">Events</a></li>
+                    <li class="nav__item"><a href="#">Products</a></li>
+                    <li class="nav__item"><a href="#">Support</a></li>
                 </ul>
             </div>
-
         </nav>
         </div>
+
+
     </header>
-    <section class="middle-content-section">
-        <img class="man-vr-image" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
-        <div class="right-text-side-all">
-            <h2 class="headlines-right-side">The leader in <br>interactive VR</h2>
-            <p class="paragraph-right-side">Founded in 2011, Loopstudios has been producing world-class<br> virtual reality
+    <section class="middle__section">
+        <img class="section__image" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
+        <div class="section__right">
+            <h2 class="section__headlines">The leader in <br>interactive VR</h2>
+            <p class="section__paragraph">Founded in 2011, Loopstudios has been producing world-class<br> virtual reality
                 projects for some of the best companies around the <br>globe. Our award-winning
                 creations have transformed <br> businesses through digital experiences that bind
                 to their brand.</p>
         </div>
-        <div class="white-rectangle"></div>
+        <div class="section__rectangle--white"></div>
     </section>
-    <section class="under-man-vr-image">
+    <section class="section__under__img">
         <div class="container">
-            <button class="see-all-button container-item "> See all </button>
-            <h2 class="headlines-creations container-item">Our Creations</h2>
+            <button class="container__button--white "> See all </button>
+            <h2 class="container__headlines">Our Creations</h2>
         </div>
-        <div class="image-container">
-            <div class="first-column-images">
-                <img class="img" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
+        <div class="container__image">
+            <div class="first__column__images">
+                <img class="images__item" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
 
-                <img class="img" src="images/desktop/image-night-arcade.jpg" alt="arcade">
-
-
-                <img class="img" src="images/desktop/image-soccer-team.jpg" alt="football player">
+                <img class="images__item" src="images/desktop/image-night-arcade.jpg" alt="arcade">
 
 
-                <img class="img" src="images/desktop/image-grid.jpg" alt="sport car">
+                <img class="images__item" src="images/desktop/image-soccer-team.jpg" alt="football player">
+
+
+                <img class="images__item" src="images/desktop/image-grid.jpg" alt="sport car">
 
             </div>
 
-            <div class="second-column-images">
-                <img class="img" src="images/desktop/image-from-above.jpg" alt=" Center earth">
+            <div class="second__column__images">
+                <img class="images__item" src="images/desktop/image-from-above.jpg" alt=" Center earth">
 
-                <img class="img" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
+                <img class="images__item" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
 
-                <img class="img" src="images/desktop/image-curiosity.jpg" alt="football player">
+                <img class="images__item" src="images/desktop/image-curiosity.jpg" alt="football player">
 
-                <img class="img" src="images/desktop//image-fisheye.jpg" alt="sport car">
+                <img class="images__item" src="images/desktop//image-fisheye.jpg" alt="sport car">
             </div>
         </div>
         <!-- <div class="title-images">
@@ -92,15 +93,15 @@
         Make it fisheye -->
     </section>
     <footer>
-        <div class="footer-top">
-            <p class="logo-down">loopstudios</p>
-            <div class="socials">
-                <div class="social social-facebook" alt="facebook icon-facebook"></div>
-                <div class="social social-twitter" alt="icon-twitter"></div>
-                <div class="social social-pinterest" alt="icon-pinterest"></div>
-                <div class="social social-instagram" alt="icon-instagram"></div>
-
+        <div class="footer__top">
+            <p class="footer__logo">loopstudios</p>
+            <div class="social__container">
+                <div class="social__item social-facebook" alt="facebook icon-facebook"></div>
+                <div class="social__item social-twitter" alt="icon-twitter"></div>
+                <div class="social__item social-pinterest" alt="icon-pinterest"></div>
+                <div class="social__item social-instagram" alt="icon-instagram"></div>
             </div>
+
         </div>
         <div class="footer-bottom">
             <ul class="menu-footer-down-list">
