--- a/index.html
+++ b/index.html
@@ -13,85 +13,84 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
     <title>Frontend Mentor PROJECT</title>
+    <style>
+        .content {
+            padding: 0 calc((100% - 1280px) / 2);
+            margin-bottom: 128px;
+        }
+    </style>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <div class="background__image">
-                <h1 class="background__title">Immersive <br> experiences <br> that deliver</h1>
-                <ul class="nav__list">
-                    <div class="nav__logo"></div>
-                    <li class="nav__item"><a href="#">About</a></li>
-                    <li class="nav__item"><a href="#">Careers</a></li>
-                    <li class="nav__item"><a href="#">Events</a></li>
-                    <li class="nav__item"><a href="#">Products</a></li>
-                    <li class="nav__item"><a href="#">Support</a></li>
-                </ul>
-            </div>
+    <header class="content background__image">
+        <nav class="nav">
+            <div class="nav__logo"></div>
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#">About</a></li>
+                <li class="nav__item"><a href="#">Careers</a></li>
+                <li class="nav__item"><a href="#">Events</a></li>
+                <li class="nav__item"><a href="#">Products</a></li>
+                <li class="nav__item"><a href="#">Support</a></li>
+            </ul>
         </nav>
+        <div class="title-wrapper">
+            <div class="background__title">
+                Immersive <br> experiences <br> that deliver
+            </div>
         </div>
-
-
     </header>
-    <section class="middle__section">
+    <section class="content middle__section">
         <img class="section__image" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
         <div class="section__right">
-            <h2 class="section__headlines">The leader in <br>interactive VR</h2>
-            <p class="section__paragraph">Founded in 2011, Loopstudios has been producing world-class<br> virtual reality
-                projects for some of the best companies around the <br>globe. Our award-winning
-                creations have transformed <br> businesses through digital experiences that bind
+            <h2 class="section__headlines">The leader in interactive VR</h2>
+            <p class="section__paragraph">Founded in 2011, Loopstudios has been producing world-class virtual reality
+                projects for some of the best companies around the globe. Our award-winning
+                creations have transformed businesses through digital experiences that bind
                 to their brand.</p>
         </div>
-        <div class="section__rectangle--white"></div>
     </section>
-    <section class="section__under__img">
+    <section class="content section__under__img">
         <div class="container">
             <button class="container__button--white "> See all </button>
             <h2 class="container__headlines">Our Creations</h2>
         </div>
-        <div class="container__image">
-            <div class="first__column__images">
-                <img class="images__item" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
 
-                <img class="images__item" src="images/desktop/image-night-arcade.jpg" alt="arcade">
-
-
-                <img class="images__item" src="images/desktop/image-soccer-team.jpg" alt="football player">
-
-
-                <img class="images__item" src="images/desktop/image-grid.jpg" alt="sport car">
-
-            </div>
-
-            <div class="second__column__images">
-                <img class="images__item" src="images/desktop/image-from-above.jpg" alt=" Center earth">
-
-                <img class="images__item" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
-
-                <img class="images__item" src="images/desktop/image-curiosity.jpg" alt="football player">
-
-                <img class="images__item" src="images/desktop//image-fisheye.jpg" alt="sport car">
-            </div>
-        </div>
-        <!-- <div class="title-images">
-            <p class="title-img-first-section">deep <br> earth</p>
-            <p class="title-img-first-section">night <br> arcade</p>
-            <p class="title-img-first-section">soccer <br> team vr</p>
-            <p class="title-img-first-section">the <br> grid</p>
-            <p class="title-img-second-section">from up <br> above Vr</p>
-            <p class="title-img-second-sectiion">rocket <br> borealis</p>
-            <p class="title-img-second-section">the <br> curiosity</p>
-            <p class="title-img-second-section">make it <br> fisheye</p>
-        </div> -->
-        <!-- Night arcade
-        Soccer team VR
-        The grid
-        From up above VR
-        Pocket borealis
-        The curiosity
-        Make it fisheye -->
+        <span class="image--title">
+            <img class="image__item" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
+            <p class="image__text--first absolute">deep <br>earth</p>
+        </span>
+        <span class="image--title">
+            <img class="image__item" src="images/desktop/image-night-arcade.jpg" alt="arcade">
+            <p class="image__text--second absolute">Night <br> arcade</p>
+        </span>
+        <span class="image--title">
+            <img class="image__item" src="images/desktop/image-soccer-team.jpg" alt="football player">
+            <p class="image__text--third absolute">Soccer <br>team VR
+            </p>
+        </span>
+        <span class="image--title">
+            <img class="image__item" src="images/desktop/image-grid.jpg" alt="sport car">
+            <p class="image__text--fourth absolute">The <br>grid</p>
+        </span>
+        <span class="image--title">
+            <img class="image__item" src="images/desktop/image-from-above.jpg" alt=" Center earth">
+            <p class="image__text--fifth absolute">From up <br> above VR</p>
+        </span>
+        <span class="image--title">
+            <img class="image__item" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
+            <p class="image__text--sixth absolute">Pocket <br> borealis</p>
+        </span>
+        <span class="image--title">
+            <img class="image__item" src="images/desktop/image-curiosity.jpg" alt="football player">
+            <p class="image__text--seventh absolute">The <br> curiosity</p>
+        </span>
+        <span class="image--title">
+            <img class="image__item" src="images/desktop//image-fisheye.jpg" alt="sport car">
+            <p class="image__text--eighth absolute">Make it <br> fisheye
+            </p>
+        </span>
     </section>
+
     <footer>
         <div class="footer__top">
             <p class="footer__logo">loopstudios</p>
@@ -104,12 +103,12 @@
 
         </div>
         <div class="footer-bottom">
-            <ul class="menu-footer-down-list">
-                <li class="item-down-nav"><a href="#">About</a></li>
-                <li class="item-down-nav"><a href="#">Careers</a></li>
-                <li class="item-down-nav"><a href="#">Events</a></li>
-                <li class="item-down-nav"><a href="#">Products</a></li>
-                <li class="item-down-nav"><a href="#">Support</a></li>
+            <ul class="footer__list">
+                <li class="footer__item"><a href="#">About</a></li>
+                <li class="footer__item"><a href="#">Careers</a></li>
+                <li class="footer__item"><a href="#">Events</a></li>
+                <li class="footer__item"><a href="#">Products</a></li>
+                <li class="footer__item"><a href="#">Support</a></li>
             </ul>
             <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
         </div>
