--- a/index.html
+++ b/index.html
@@ -9,21 +9,25 @@
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="/RWD/hamburger.css">
+    <link rel="stylesheet" href="/RWD/item.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
     <title>Frontend Mentor PROJECT</title>
     <style>
-        .content {
-            padding: 0 calc((100% - 1280px) / 2);
-            margin-bottom: 128px;
+        @media only screen and (min-width:1280px) {
+            .content {
+                margin: 0 calc((100% - 1280px) / 2);
+                margin-bottom: 128px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <header class="content background__image">
-        <nav class="nav">
+    <header class="header">
+        <nav class="nav__desktop">
             <div class="nav__logo"></div>
             <ul class="nav__list">
                 <li class="nav__item"><a href="#">About</a></li>
@@ -33,65 +37,77 @@
                 <li class="nav__item"><a href="#">Support</a></li>
             </ul>
         </nav>
-        <div class="title-wrapper">
-            <div class="background__title">
+        <nav class="nav__mobile">
+            <div class="mobile__logo"></div>
+            <div class="hamburger open">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+        </nav>
+        <div class="wrapper">
+            <div class="wrapper__title">
                 Immersive <br> experiences <br> that deliver
             </div>
         </div>
     </header>
-    <section class="content middle__section">
-        <img class="section__image" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
-        <div class="section__right">
-            <h2 class="section__headlines">The leader in interactive VR</h2>
-            <p class="section__paragraph">Founded in 2011, Loopstudios has been producing world-class virtual reality
+
+    <section class="vr__section content">
+        <img class="vr__image  content" src="/images/desktop/image-interactive.jpg" alt="mężczyzna z okularami VR">
+        <div class="vr__description">
+            <h2 class="vr__headlines">The leader in interactive VR</h2>
+            <p class="vr__paragraph">Founded in 2011, Loopstudios has been producing world-class virtual reality
                 projects for some of the best companies around the globe. Our award-winning
                 creations have transformed businesses through digital experiences that bind
                 to their brand.</p>
         </div>
     </section>
-    <section class="content section__under__img">
-        <div class="container">
-            <button class="container__button--white "> See all </button>
-            <h2 class="container__headlines">Our Creations</h2>
+
+    <section class="content  gallery__section">
+        <div class="gallery__heading">
+            <button class="gallery__button--white "> See all </button>
+            <h2 class="gallery__headlines">Our Creations</h2>
         </div>
 
-        <span class="image--title">
-            <img class="image__item" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
-            <p class="image__text--first absolute">deep <br>earth</p>
-        </span>
-        <span class="image--title">
-            <img class="image__item" src="images/desktop/image-night-arcade.jpg" alt="arcade">
-            <p class="image__text--second absolute">Night <br> arcade</p>
-        </span>
-        <span class="image--title">
-            <img class="image__item" src="images/desktop/image-soccer-team.jpg" alt="football player">
-            <p class="image__text--third absolute">Soccer <br>team VR
-            </p>
-        </span>
-        <span class="image--title">
-            <img class="image__item" src="images/desktop/image-grid.jpg" alt="sport car">
-            <p class="image__text--fourth absolute">The <br>grid</p>
-        </span>
-        <span class="image--title">
-            <img class="image__item" src="images/desktop/image-from-above.jpg" alt=" Center earth">
-            <p class="image__text--fifth absolute">From up <br> above VR</p>
-        </span>
-        <span class="image--title">
-            <img class="image__item" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
-            <p class="image__text--sixth absolute">Pocket <br> borealis</p>
-        </span>
-        <span class="image--title">
-            <img class="image__item" src="images/desktop/image-curiosity.jpg" alt="football player">
-            <p class="image__text--seventh absolute">The <br> curiosity</p>
-        </span>
-        <span class="image--title">
-            <img class="image__item" src="images/desktop//image-fisheye.jpg" alt="sport car">
-            <p class="image__text--eighth absolute">Make it <br> fisheye
-            </p>
-        </span>
+        <div class="items">
+            <div class="item">
+                <img class="item__image " src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
+                <p class="item__text">deep <br>earth</p>
+            </div>
+            <div class="item">
+                <img class="item__image" src="images/desktop/image-night-arcade.jpg" alt="arcade">
+                <p class="item__text">Night <br> arcade</p>
+            </div>
+            <div class="item">
+                <img class="item__image" src="images/desktop/image-soccer-team.jpg" alt="football player">
+                <p class="item__text">Soccer <br>team VR
+                </p>
+            </div>
+            <div class="item">
+                <img class="item__image" src="images/desktop/image-grid.jpg" alt="sport car">
+                <p class="item__text">The <br>grid</p>
+            </div>
+            <div class="item">
+                <img class="item__image" src="images/desktop/image-from-above.jpg" alt=" Center earth">
+                <p class="item__text">From up <br> above VR</p>
+            </div>
+            <div class="item">
+                <img class="item__image" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
+                <p class="item__text">Pocket <br> borealis</p>
+            </div>
+            <div class="item">
+                <img class="item__image" src="images/desktop/image-curiosity.jpg" alt="football player">
+                <p class="item__text">The <br> curiosity</p>
+            </div>
+            <div class="item">
+                <img class="item__image" src="images/desktop//image-fisheye.jpg" alt="sport car">
+                <p class="item__text">Make it <br> fisheye
+                </p>
+            </div>
+        </div>
     </section>
 
-    <footer>
+    <!-- <footer>
         <div class="footer__top">
             <p class="footer__logo">loopstudios</p>
             <div class="social__container">
@@ -113,7 +129,7 @@
             <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
         </div>
 
-    </footer>
+    </footer> -->
     <script src="main.js"></script>
 </body>
 
