sorting media querry in css file and create social.css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="/RWD/hamburger.css">
     <link rel="stylesheet" href="/RWD/item.css">
+    <link rel="stylesheet" href="/RWD/social.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
@@ -71,54 +72,53 @@
 
         <div class="items">
             <div class="item">
-                <img class="item__image " src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
+                <img class="item__image mobile" src="images/mobile/image-deep-earth.jpg" alt=" Center earth">
+                <img class="item__image" src="images/desktop/image-deep-earth.jpg" alt=" Center earth">
                 <p class="item__text">deep <br>earth</p>
             </div>
             <div class="item">
+                <img class="item__image mobile" src="images/mobile/image-night-arcade.jpg" alt="arcade">
                 <img class="item__image" src="images/desktop/image-night-arcade.jpg" alt="arcade">
                 <p class="item__text">Night <br> arcade</p>
             </div>
             <div class="item">
+                <img class="item__image mobile" src="images/mobile/image-soccer-team.jpg" alt="football player">
                 <img class="item__image" src="images/desktop/image-soccer-team.jpg" alt="football player">
                 <p class="item__text">Soccer <br>team VR
                 </p>
             </div>
             <div class="item">
+                <img class="item__image mobile" src="images/mobile/image-grid.jpg" alt="sport car">
                 <img class="item__image" src="images/desktop/image-grid.jpg" alt="sport car">
                 <p class="item__text">The <br>grid</p>
             </div>
             <div class="item">
+                <img class="item__image mobile" src="images/mobile/image-from-above.jpg" alt=" Center earth">
                 <img class="item__image" src="images/desktop/image-from-above.jpg" alt=" Center earth">
                 <p class="item__text">From up <br> above VR</p>
             </div>
             <div class="item">
+                <img class="item__image mobile" src="images/mobile/image-pocket-borealis.jpg" alt="arcade">
                 <img class="item__image" src="images/desktop/image-pocket-borealis.jpg" alt="arcade">
                 <p class="item__text">Pocket <br> borealis</p>
             </div>
             <div class="item">
+                <img class="item__image mobile" src="images/mobile/image-curiosity.jpg" alt="football player">
                 <img class="item__image" src="images/desktop/image-curiosity.jpg" alt="football player">
                 <p class="item__text">The <br> curiosity</p>
             </div>
             <div class="item">
-                <img class="item__image" src="images/desktop//image-fisheye.jpg" alt="sport car">
+                <img class="item__image mobile" src="images/mobile/image-fisheye.jpg" alt="sport car">
+                <img class="item__image" src="images/desktop/image-fisheye.jpg" alt="sport car">
                 <p class="item__text">Make it <br> fisheye
                 </p>
             </div>
         </div>
     </section>
 
-    <!-- <footer>
-        <div class="footer__top">
+    <footer>
+        <div class="footer__left">
             <p class="footer__logo">loopstudios</p>
-            <div class="social__container">
-                <div class="social__item social-facebook" alt="facebook icon-facebook"></div>
-                <div class="social__item social-twitter" alt="icon-twitter"></div>
-                <div class="social__item social-pinterest" alt="icon-pinterest"></div>
-                <div class="social__item social-instagram" alt="icon-instagram"></div>
-            </div>
-
-        </div>
-        <div class="footer-bottom">
             <ul class="footer__list">
                 <li class="footer__item"><a href="#">About</a></li>
                 <li class="footer__item"><a href="#">Careers</a></li>
@@ -126,10 +126,20 @@
                 <li class="footer__item"><a href="#">Products</a></li>
                 <li class="footer__item"><a href="#">Support</a></li>
             </ul>
+        </div>
+
+        </div>
+        <div class="footer__right">
+            <div class="social__container">
+                <div class="social__item social-facebook" alt="facebook icon-facebook"></div>
+                <div class="social__item social-twitter" alt="icon-twitter"></div>
+                <div class="social__item social-pinterest" alt="icon-pinterest"></div>
+                <div class="social__item social-instagram" alt="icon-instagram"></div>
+            </div>
             <p class="copyright">© 2021 Loopstudios. All rights reserved.</p>
         </div>
 
-    </footer> -->
+    </footer>
     <script src="main.js"></script>
 </body>
 
