--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rozha+One&display=swap" rel="stylesheet">
     <title>Frontend Mentor PROJECT</title>
     <style>
         @media only screen and (min-width:1280px) {
@@ -41,12 +44,21 @@
         </nav>
         <nav class="nav__mobile">
             <div class="mobile__logo"></div>
-            <div class="hamburger open">
+            <div class="hamburger">
                 <span></span>
                 <span></span>
                 <span></span>
             </div>
-            <div class="mobile-menu"></div>
+            <div class="mobile-menu">
+                <ul class="menu-list">
+                    <li class="menu-item"><a href="#">About</a></li>
+                    <li class="menu-item"><a href="#">Careers</a></li>
+                    <li class="menu-item"><a href="#">Events</a></li>
+                    <li class="menu-item"><a href="#">Products</a></li>
+                    <li class="menu-item"><a href="#">Support</a></li>
+                </ul>
+
+            </div>
         </nav>
         <div class="wrapper">
             <div class="wrapper__title">
